Version: 1.8.125 (2.0 beta)
Date:   .06.2020
  Features:
    - Added few "to-substances-1" recipes
    - New x64 icons for items and recipes
    - Changed x64 icons for fishes
    - Added corn-dough and wheat-dough, so that food from flour does not require pure-water in the future
    - Added apple and orange eating sounds
  Balances:
    - Balanced trees recipes
    - Balanced "tomato-seeds" recipe
    - Decreased and fixed food-1-capsule fullness
  Fixes:
    - Fixed many locales
    - Fixed "to-substances-1" recipes
    - Fixed changelog again, not showing ingame
  TODO:
    - ...
---------------------------------------------------------------------------------------------------
Version: 1.8.121 (2.0 beta)
Date: 06.06.2020
  Fixes:
    - Fix young and adult tree locale
    - Hot fix on_built filters for entity-ghost
---------------------------------------------------------------------------------------------------
Version: 1.8.118 (2.0 beta)
Date: 05.06.2020
  Features:
    - Changed some fullnes state icons
  Fixes:
    - Fixed young tree locale
    - Hot fix on_built filters
---------------------------------------------------------------------------------------------------
Version: 1.8.115 (2.0 beta)
Date: 04.06.2020
  Features:
    - New recipe pure-water-boiled
    - New technology meat-grind-processing
    - New plant - wheat
    - New eating sounds
    - Added new locales
    - New x64 icons for items, recipes and technology
    - Added "trees-gardener" - counter of landed plants/trees fos statistic and achivements
    - Added basic growing system for plants/trees: seed -> seedling -> sapling -> young -> adult
    - Added icons to fullnes state
  Balances:
    - Balances for fish recipes
    - Balances for food
    - Balances for trees growing time
  Fixes:
    - Refactored overeating state
    - Compatibility hot fix for Factorio 0.18.27
    - Reorganized some lua files requirements
    - Deleted old unused migration files