@@ -6,7 +6,8 @@
     "contact": "",
     "homepage": "https://github.com/Oceanel51/FoodIndustry",
     "factorio_version": "0.18",
-    "dependencies": ["base >= 0.18.27",
+    "dependencies": ["base >= 0.18.30",
+                     "stdlib >= 1.4.3",
                      "? bobmining >= 0.18.1",
                      "? bobplates >= 0.18.6",
                      "? cargo-ships >= 0.0.51",
