@@ -272,7 +272,7 @@ advanced-regen-capsule=Regenerates 60HP/s for 30 seconds.\nRestores Energy +60/+
 basic-health-buffer-capsule=Increases your max health by 200 for 3 minutes.\nRestores Energy +40/+10 Drinks [0,0,0,+2], fills you up by 80%, heals 50 HP
 advanced-health-buffer-capsule=Increases your max health by 1250 for 45 seconds.\nRestores Energy +90/+25 Drinks [0,0,0,+5], fills you up by 110%, heals 100 HP
 
-simple-digestive-capsule=Helps the stomach to digest food for 40% faster for 6 min.\nRestores Energy +5/0 Drinks [-1,0,0,0]
+simple-digestive-capsule=Helps the stomach to digest food for 40% faster for 6 min.\nRestores Energy +5/0 Drinks [-0.5,0,0,0], fills you up by 5%
 basic-digestive-capsule=Helps the stomach to digest food for 100% faster for 4 min.\nRestores Energy +15/+10 Drinks [-1,+2,+1,0], fills you up by 10%
 advanced-digestive-capsule=Helps the stomach to digest food for 350% faster for 2 min.\nRestores Energy +35/+20 Drinks [0,+3,+2,-1], fills you up by 20%
 basic-sleep-capsule=Allows you to fall asleep quickly, immediately takes the body to a stage of "snooze" for 5 min.\nRestores Energy +50/+10 Drinks [-1,-1,0,+0.4], fills you up by 50%
@@ -607,10 +607,10 @@ fi-tree-greenhouse=Allows you to grow young saplings for transplanting to other 
 burner-fishing-inserter=Put it on the edge of the pond and it will begin to catch fish that swims past.
 fishing-inserter=Put it on the edge of the pond and it will begin to catch fish that swims past.
 
-cattle-calf="I need Straw"
+cattle-calf="I need [img=item/straw]__ITEM__straw__ to grow"
 cattle-spawner=
-cattle-feeder=
-cattle-grabber=
+cattle-feeder=Uses __ITEM__straw__ to feed cattles within a 4-tile radius.
+cattle-grabber=Collects adult cattles within reach of "the hand".
 cattle-butcher=
 cattle-wood-fence=
 cattle-wood-gate=
