@@ -267,7 +267,7 @@ advanced-regen-capsule=Регенирирует 60HP/сек на 30 секунд
 basic-health-buffer-capsule=Увеличивает количество здоровья на 200 ед. на 3 минуты.\nRestores Energy +40/+10 Drinks [0,0,0,+2], fills you up by 80%, heals 50 HP
 advanced-health-buffer-capsule=Увеличивает количество здоровья на 1250 ед. на 45 секунд.\nRestores Energy +90/+25 Drinks [0,0,0,+5], fills you up by 110%, heals 100 HP
 
-simple-digestive-capsule=Helps the stomach to digest food for 40% faster for 6 min.\nRestores Energy +5/0 Drinks [-1,0,0,0]
+simple-digestive-capsule=Helps the stomach to digest food for 40% faster for 6 min.\nRestores Energy +5/0 Drinks [-0.5,0,0,0], fills you up by 5%
 basic-digestive-capsule=Helps the stomach to digest food for 100% faster for 4 min.\nRestores Energy +15/+10 Drinks [-1,+2,+1,0], fills you up by 10%
 advanced-digestive-capsule=Helps the stomach to digest food for 350% faster for 2 min.\nRestores Energy +35/+20 Drinks [0,+3,+2,-1], fills you up by 20%
 basic-sleep-capsule=Allows you to fall asleep quickly, immediately takes the body to a stage of "snooze" for 5 min.\nRestores Energy +50/+10 Drinks [-1,-1,0,+0.4], fills you up by 50%
@@ -551,12 +551,12 @@ fishing-inserter=Манипулятор-удочка
 
 cattle=Животное
 cattle-calf=Детеныш
-cattle-spawner=Cattle breeder
-cattle-feeder=Cattle feeder
-cattle-grabber=Cattle grabber
-cattle-butcher=Cattle butcher
-cattle-wood-fence=Cattle wooden fence
-cattle-wood-gate=Cattle wooden gate
+cattle-spawner=Скотоводческий улей
+cattle-feeder=Кормушка для скота
+cattle-grabber=Манипулятор для забора скота
+cattle-butcher=Убойный цех
+cattle-wood-fence=Деревянный забор для животных
+cattle-wood-gate=Автоматизированные деревянные врата
 
 [entity-description]
 fi-basic-farmland=Вскопанный и ограждённый плодородный участок для выращивания некоторых культур. Через время вам придется её удобрить или заменить.
@@ -597,10 +597,10 @@ fi-tree-greenhouse=Позволяет выращивать молодые саж
 burner-fishing-inserter=Установите на краю водоёма чтобы он начал вылавливать проплывающую мимо рыбу.
 fishing-inserter=Установите на краю водоёма чтобы он начал вылавливать проплывающую мимо рыбу.
 
-cattle-calf="Мне необходимо сено"
+cattle-calf="Чтобы вырасти мне необходимо [img=item/straw]__ITEM__straw__"
 cattle-spawner=
-cattle-feeder=
-cattle-grabber=
+cattle-feeder=Использует __ITEM__straw__ для кормления животных в радиусе 4 клетки.
+cattle-grabber=Собирает взрослых животных в пределах досягаемости "руки".
 cattle-butcher=
 cattle-wood-fence=
 cattle-wood-gate=
